<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:padding="10dp"
    tools:context=".PasswordGeneratorActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <com.applovin.mediation.ads.MaxAdView
                xmlns:maxads="http://schemas.applovin.com/android/1.0"
                maxads:adUnitId="efb147d4c62f6538"
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
               />

            <ImageView
                android:id="@+id/passwordImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@+id/adView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:src="@drawable/welcome_image"
                android:contentDescription="@null"
                />

            <TextView
                android:id="@+id/result"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_below="@+id/passwordImage"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:hint="@string/password"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textSize="15sp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:textColor="@color/black"
                />
            <ImageView
                android:id="@+id/copy"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/copy"
                android:layout_toEndOf="@+id/result"
                android:layout_marginTop="130dp"
                android:contentDescription="@null"
                />
            <TextView
                android:id="@+id/digitText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passwordDigit"
                android:layout_below="@+id/result"
                android:fontFamily="sans-serif-condensed"
                android:layout_marginTop="30dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />
            <EditText
                android:id="@+id/inputSize"
                android:layout_toEndOf="@+id/digitText"
                android:layout_marginTop="217dp"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:autofillHints="" />

            <Button
                android:id="@+id/generator"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_below="@+id/inputSize"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="35dp"
                android:background="@drawable/button_design"
                android:text="@string/generate"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="11sp"
                />

            <CheckBox
                android:id="@+id/upper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/generator"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:textStyle="bold"
                android:text="@string/upperCaseLetter"/>
            <CheckBox
                android:id="@+id/lower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/upper"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/lower"/>
            <CheckBox
                android:id="@+id/digit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lower"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:textStyle="bold"
                android:text="@string/digit"/>

            <CheckBox
                android:id="@+id/symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/digit"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/symbol"/>


        </RelativeLayout>
    </ScrollView>

</RelativeLayout>